design for link

--- a/templates/index.html
+++ b/templates/index.html
@@ -84,6 +84,10 @@
             border-top-left-radius: 3px;
             border-top-right-radius: 3px;
         }
+        #extract {
+            color: #fff !important;
+            text-end;
+        }
     </style>
 </head>
 <body>
@@ -93,7 +97,7 @@
             <div class="header-container mb-4 p-3">
                 <h1>NHS Prescriptions Dashboard - Vitamin D </h1> 
                 
-                <a href="#" onclick="extractData()">Extract data from NHS</a>
+                <a href="#" onclick="extractData()" id="extract">Extract data from NHS</a>
             </div>
             <div class="row" style="padding-bottom:10px;">
                 <form class="row g-3">
