issue resolved for items for vitamin d vs patient

--- a/templates/index.html
+++ b/templates/index.html
@@ -616,6 +616,8 @@
             if (exportFile=='csv'){
                 document.getElementById('csvLink').href = url;
                 document.getElementById('csvLink').click();
+                console.log('csv export')
+                console.log(url)
             }
             else{
                 document.getElementById('pdfLink').href = url;
